--- a/privacy.html
+++ b/privacy.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>アプリ紹介サイト</title>
+    <title>プライバシーポリシー</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -12,19 +12,20 @@
             <a href="index.html" class="logo">
                 <img src="logo.png" alt="ロゴ">
             </a>
-            <a href="apps.html" class="nav-link">アプリ一覧</a>
+            <a href="app-list.html" class="nav-link">アプリ一覧</a>
         </nav>
     </header>
 
     <main>
-        <section class="intro">
-            <h1>自己紹介</h1>
-            <p>こんにちは！私はWeb制作のプロフェッショナルです。このサイトでは、私が開発した様々なアプリを紹介しています。それぞれのアプリが皆さんの生活や仕事に役立つことを願っています。</p>
+        <section class="privacy-policy" id="privacy-policy">
+            <!-- プライバシーポリシーテキストがここに挿入されます -->
         </section>
     </main>
 
     <footer>
         <a href="contact.html" class="footer-link">コンタクト</a>
     </footer>
+
+    <script src="privacy_policy/load_policy.js"></script>
 </body>
 </html>
