--- a/privacy.html
+++ b/privacy.html
@@ -10,7 +10,7 @@
     <header>
         <nav class="navbar">
             <a href="index.html" class="logo">
-                <img src="logo.png" alt="ロゴ">
+                <img src="images/iwa7.png" alt="ロゴ">
             </a>
             <a href="app-list.html" class="nav-link">アプリ一覧</a>
         </nav>
@@ -23,7 +23,7 @@
     </main>
 
     <footer>
-        <a href="contact.html" class="footer-link">コンタクト</a>
+        アプリに関するお問い合わせ: <a href="https://x.com/Gotchi0001" class="footer-link">@Gotchi0001</a>
     </footer>
 
     <script src="privacy_policy/load_policy.js"></script>
