--- a/apps.html
+++ b/apps.html
@@ -10,7 +10,7 @@
     <header>
         <nav class="navbar">
             <a href="index.html" class="logo">
-                <img src="logo.png" alt="ロゴ">
+                <img src="images/iwa7.png" alt="ロゴ">
             </a>
             <a href="apps.html" class="nav-link">アプリ一覧</a>
         </nav>
@@ -19,32 +19,30 @@
     <main>
         <section class="app-list">
             <article class="app">
-                <img src="shiritori.png" alt="しりとりアプリ" class="app-icon">
-                <h2>しりとりアプリ</h2>
-                <p>楽しいしりとりゲームで語彙力を高めましょう。家族や友人と一緒に楽しめます。</p>
+                <img src="images/shiritori.jpg" alt="しりとりアプリ" class="app-icon">
+                <h2>英単語しりとり</h2>
+                <p>英単語を使ったしりとりで敵を倒そう！楽しみながら英単語が覚えられるよ！</p>
                 <div class="app-links">
-                    <a href="#" class="store-link">iOSストア</a>
-                    <a href="#" class="store-link">Androidストア</a>
+                    <a href="https://apps.apple.com/jp/app/%E8%8B%B1%E5%8D%98%E8%AA%9E%E3%81%97%E3%82%8A%E3%81%A8%E3%82%8A/id1581560378?itsct=apps_box_badge&amp;itscg=30200" style="display: inline-block; overflow: hidden; border-radius: 13px; width: 250px; height: 83px;"><img src="https://tools.applemediaservices.com/api/badges/download-on-the-app-store/black/ja-jp?size=250x83&amp;releaseDate=1629244800" alt="Download on the App Store" style="border-radius: 13px; width: 155px; height: 52px;"></a>
                 </div>
                 <a href="privacy.html?app=shiritori" class="privacy-link">プライバシーポリシー</a>
             </article>
             <article class="app">
-                <img src="quiz.png" alt="クイズアプリ" class="app-icon">
-                <h2>クイズアプリ</h2>
-                <p>様々なトピックのクイズに挑戦して、知識を深めましょう。ランキング機能付き。</p>
+                <img src="images/pokemonq.jpg" alt="クイズアプリ" class="app-icon">
+                <h2>図鑑クイズ for ポケモン</h2>
+                <p>ポケモン図鑑の説明からポケモンの名前を当てるクイズアプリ！たくさん正解してランキング上位を目指そう！</p>
                 <div class="app-links">
-                    <a href="#" class="store-link">iOSストア</a>
-                    <a href="#" class="store-link">Androidストア</a>
+                    <a href="https://apps.apple.com/jp/app/%E5%9B%B3%E9%91%91%E3%82%AF%E3%82%A4%E3%82%BA-for-%E3%83%9D%E3%82%B1%E3%83%A2%E3%83%B3/id1634552517?itsct=apps_box_badge&amp;itscg=30200" style="display: inline-block; overflow: hidden; border-radius: 13px; width: 250px; height: 83px;"><img src="https://tools.applemediaservices.com/api/badges/download-on-the-app-store/black/ja-jp?size=250x83&amp;releaseDate=1629244800" alt="Download on the App Store" style="border-radius: 13px; width: 155px; height: 52px;"></a>
                 </div>
                 <a href="privacy.html?app=quiz" class="privacy-link">プライバシーポリシー</a>
             </article>
             <article class="app">
-                <img src="color.png" alt="色アプリ" class="app-icon">
-                <h2>色アプリ</h2>
-                <p>色の組み合わせを学び、デザインスキルを向上させるためのアプリ。カラーパレット作成機能付き。</p>
+                <img src="images/color.png" alt="色アプリ" class="app-icon">
+                <h2>Color Pattern Maker</h2>
+                <p>ボーダー、タイル、チェッカーなどシンプルなパターンを簡単に作成することができるアプリ！お気に入りのパターンを作ってスクリーンショットで保存しよう！</p>
                 <div class="app-links">
-                    <a href="#" class="store-link">iOSストア</a>
-                    <a href="#" class="store-link">Androidストア</a>
+                    <a href="#?itsct=apps_box_badge&amp;itscg=30200" style="display: inline-block; overflow: hidden; border-radius: 13px; width: 250px; height: 83px;"><img src="https://tools.applemediaservices.com/api/badges/download-on-the-app-store/black/ja-jp?size=250x83&amp;releaseDate=1629244800" alt="Download on the App Store" style="border-radius: 13px; width: 155px; height: 52px;"></a>
+                    <a href='#&pcampaignid=pcampaignidMKT-Other-global-all-co-prtnr-py-PartBadge-Mar2515-1'><img alt='Google Play で手に入れよう' src='https://play.google.com/intl/ja/badges/static/images/badges/ja_badge_web_generic.png' width="155" /></a>
                 </div>
                 <a href="privacy.html?app=color" class="privacy-link">プライバシーポリシー</a>
             </article>
@@ -52,7 +50,7 @@
     </main>
 
     <footer>
-        <a href="contact.html" class="footer-link">コンタクト</a>
+        アプリに関するお問い合わせ: <a href="https://x.com/Gotchi0001" class="footer-link">@Gotchi0001</a>
     </footer>
 </body>
 </html>
