--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <header>
         <nav class="navbar">
             <a href="index.html" class="logo">
-                <img src="logo.png" alt="ロゴ">
+                <img src="images/iwa7.png" alt="ロゴ">
             </a>
             <a href="apps.html" class="nav-link">アプリ一覧</a>
         </nav>
@@ -18,13 +18,15 @@
 
     <main>
         <section class="intro">
-            <h1>自己紹介</h1>
-            <p>こんにちは！私はWeb制作のプロフェッショナルです。このサイトでは、私が開発した様々なアプリを紹介しています。それぞれのアプリが皆さんの生活や仕事に役立つことを願っています。</p>
+            <h1>Welcome to Kosuke Goto's website!</h1>
+            <img src="images/iwa7.png" height=300 alt="ロゴ">
+            <p>ジャンル問わずモバイルアプリを作ってリリースしています。これからもいろんなアプリを作っていきたいと思ってます。気に入ったものがあればぜひダウンロードして使ってみてください！</p>
         </section>
+        <a href="apps.html">アプリの一覧を見る</a>
     </main>
 
     <footer>
-        <a href="contact.html" class="footer-link">コンタクト</a>
+        アプリに関するお問い合わせ: <a href="https://x.com/Gotchi0001" class="footer-link">@Gotchi0001</a>
     </footer>
 </body>
 </html>
