--- a/index.html
+++ b/index.html
@@ -3,30 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>アプリ紹介サイト</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Kosuke Goto - アプリ一覧</title>
+    <link rel="stylesheet" href="assets/styles.css">
 </head>
 <body>
-    <header>
-        <nav class="navbar">
-            <a href="index.html" class="logo">
-                <img src="images/iwa7.png" alt="ロゴ">
-            </a>
-            <a href="apps.html" class="nav-link">アプリ一覧</a>
-        </nav>
-    </header>
-
-    <main>
-        <section class="intro">
-            <h1>Welcome to Kosuke Goto's website!</h1>
-            <img src="images/iwa7.png" height=300 alt="ロゴ">
-            <p>ジャンル問わずモバイルアプリを作ってリリースしています。これからもいろんなアプリを作っていきたいと思ってます。気に入ったものがあればぜひダウンロードして使ってみてください！</p>
-        </section>
-        <a href="apps.html">アプリの一覧を見る</a>
-    </main>
-
-    <footer>
-        アプリに関するお問い合わせ: <a href="https://x.com/Gotchi0001" class="footer-link">@Gotchi0001</a>
-    </footer>
+    <div class="container">
+        <h1>Kosuke Goto のアプリ一覧</h1>
+        <p>ジャンル問わずモバイルアプリを作ってリリースしています。これからもいろんなアプリを作っていきたいと思ってます。気に入ったものがあればぜひダウンロードして使ってみてください！</p>
+        <div id="app-list" class="app-list"></div>
+    </div>
+    <script src="assets/scripts.js"></script>
 </body>
 </html>
