--- a/index.html
+++ b/index.html
@@ -1,17 +1,24 @@
 <!DOCTYPE html>
 <html lang="ja">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kosuke Goto - アプリ一覧</title>
     <link rel="stylesheet" href="assets/styles.css">
 </head>
+
 <body>
     <div class="container">
         <h1>Kosuke Goto のアプリ一覧</h1>
         <p>ジャンル問わずモバイルアプリを作ってリリースしています。これからもいろんなアプリを作っていきたいと思ってます。気に入ったものがあればぜひダウンロードして使ってみてください！</p>
         <div id="app-list" class="app-list"></div>
     </div>
+    <div class="contact">
+        <a href="https://forms.gle/6uVewEMnk95LKQ9t7" class="contact-button" target="_blank"
+            rel="noopener noreferrer">お問い合わせはこちら</a>
+    </div>
     <script src="assets/scripts.js"></script>
 </body>
+
 </html>
